packages/gaist/examples/invalid/malformed-function.gaist
// Malformed function definition
state {
  count = 0;
}

logic {
  function test( {
    count = 1;
  }
} 